# ccse-cw1

./: .gitignore  Cargo.toml  README.md  diesel.toml  tailwind.config.ts
.github/workflows/: build.yml  main.yml  security.yml
migrations/2024-10-21-145108_users/: up.sql
migrations/2024-10-22-142625_sessions/: up.sql
migrations/2024-10-23-162034_products/: up.sql
server_files/css/: final.css  initial.css
server_files/static/: 404.txt
sql/: actionsinit.sql  down.sql  products.sql  up.sql
src/: main.rs  schema.rs
src/auth/: mod.rs  session.rs
src/db/: models.rs  schema.rs
src/ecom/: admin.rs  mod.rs
src/tests/: mod.rs
templates/: admin.html  base.html  browse.html  cart.html  checkout.html  homepage.html  order_details.html  orders.html  product.html  signin.html  signup.html  success_checkout.html
